# ksynth-desktop

./: .gitignore  BUILDING.md  CMakeLists.txt  GUIDE.md  LICENSE  README.md  vendor-fltk.sh
.github/workflows/: build.yml
src/: audio.c  audio.h  engine.c  engine.h  main.c  main_ui.cpp  session.c  session.h  theme.cpp  theme.h
src/ui/: Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  Notebook.cpp  Notebook.h  PadGrid.cpp  PadGrid.h  PadWindow.cpp  PadWindow.h  SlotStrip.cpp  SlotStrip.h  Splitter.cpp  Splitter.h
